--- a/package.json
+++ b/package.json
@@ -10,5 +10,12 @@
 		"cheerio": "^1.0.0-rc.10",
 		"fs": "^0.0.1-security",
 		"fs-extra": "^10.0.0"
+	},
+	"devDependencies": {
+		"path": "^0.12.7",
+		"jest": "^27.5.0"
+	},
+	"scripts": {
+		"test": "jest"
 	}
 }
